tests/paczka2/big_fuzzy/73531458.err
Error in line 4: fZ7Rv2EN A13 45,0
Error in line 10: fZ7Rv2EN A13 56,6
Error in line 7: gLhy8hVIUE S643 2,3
Error in line 12: fZ7Rv2EN S643 13,2
Error in line 31: gLhy8hVIUE A13 68,8
Error in line 26: fZ7Rv2EN S68 301,6
Error in line 45: zVPR84DHcIB S68 4,2
Error in line 49: zVPR84DHcIB S643 55,2
Error in line 48: gLhy8hVIUE S643 12,4
Error in line 53: gLhy8hVIUE A1- 41,4
Error in line 51: gLhy8hVIUE A298 79,8
Error in line 50: zVPR84DHcIB S68 28,1
Error in line 41: E4fQEJJtdhz A13 85,2
Error in line 64: hx1J S68 135,7
Error in line 66: fZ7Rv2EN A13 76,8
Error in line 69: fZ7Rv2EN S68 53,8
Error in line 74: zVPR84DHcIB A13 126,c
Error in line 72: A13 S68 66,2
Error in line 65: hx1J A298 33,4
Error in line 71: fZ7Rv2EN A13 52,1
Error in line 78: E4fQEJJtdhz S643 78,7
Error in line 83: E4fQEJJtdhz S68 58,1
Error in line 57: zVPR84DHcIB A13 25,9
Error in line 54: gLhy8hVIUE A13 85,3
Error in line 85: E4fQEJJtdhz A13 60,0
Error in line 95: hx1J A13 90,6
Error in line 99: zVPR84DHcIB A298 99,1
Error in line 109: 1IJ3vY S68 80,8
Error in line 106: zVPR84DHcIB S643 68,4
Error in line 97: gLhy8hVIUE A298 43,5
Error in line 115: gLhy8hVIUE S643 64,5
Error in line 117: fZ7Rv2EN A13 21,07
Error in line 120: fZ7Rv2EN A13 23,4
Error in line 126: E4fQEJJtdhz S643 -4,2
Error in line 124: E4fQEJJtdhz S643 76,0
Error in line 141: zVPR84DHcIB S68 -5,9
Error in line 133: 1IJ3vY A13 7,5
Error in line 146: gLhy8hVIUE S68 83,8
Error in line 153: A13 A298 61,11
Error in line 156: hx1J A298 78,5
Error in line 162: gLhy8hVIUE S643 64,1
Error in line 151: fZ7Rv2EN S68 11,5
Error in line 179: 1IJ3vY A13 95,9
Error in line 158: hx1J S643 10,9
Error in line 185: hx1J S68 67,7
Error in line 210: gLhy8hVIUE S643 87,4
Error in line 211: gLhy8hVIUE S68 84,1
Error in line 218: 1IJ3vY A298 28,54
Error in line 204: E4fQEJJtdhz A13 67,3
Error in line 224: 1IJ3vY A298 2,0
Error in line 226: A13 S68 23,6
